
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int V360Context ;


 float M_PI ;
 float M_PI_2 ;
 float cosf (float const) ;
 int normalize_vector (float*) ;
 float sinf (float const) ;

__attribute__((used)) static void sinusoidal_to_xyz(const V360Context *s,
                              int i, int j, int width, int height,
                              float *vec)
{
    const float theta = ((2.f * j) / height - 1.f) * M_PI_2;
    const float phi = ((2.f * i) / width - 1.f) * M_PI / cosf(theta);

    const float sin_phi = sinf(phi);
    const float cos_phi = cosf(phi);
    const float sin_theta = sinf(theta);
    const float cos_theta = cosf(theta);

    vec[0] = cos_theta * sin_phi;
    vec[1] = -sin_theta;
    vec[2] = -cos_theta * cos_phi;

    normalize_vector(vec);
}
